--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7"
+    "nanoid": "^5.0.9",
+    "nodemon": "^3.1.7",
+    "uuid": "^11.0.3"
   }
 }
