--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.9",
     "nodemon": "^3.1.7",
+    "serverless-http": "^3.2.0",
     "uuid": "^11.0.3"
   }
 }
